2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/*.[ch]: Use the sources to write the documentation,
	as it should be.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-defbox.c: Add case-insensitive search, using
	gtksourceview search code. (#466180)
	
	(hide_find_pane),
	(find_prev_clicked_cb), (find_next_clicked_cb),
	(find_entry_changed_cb),
	(gdict_defbox_real_show_find), (gdict_defbox_real_hide_find),
	(gdict_defbox_set_show_find): Automatically hide the find pane
	widget after 5 seconds since the last change in the entry or the
	last clicked event on the find next/prev buttons.
	
	(gdict_defbox_init), (gdict_defbox_dispose): Remove the unused
	GtkTooltips object.

2007-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-defbox.c (gdict_defbox_insert_body): Add
	more strict validation when highlighting the links. (#465336)

2007-08-09  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c (gdict_window_lookup_end): Perform a
	match of the similar words even if we have found a valid
	definition. (#464991)

2007-08-05  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c (sidebar_closed_cb): Use the right
	function to set the sidebar as invisible instead of directly
	accessing the data. (#436542, Iain Nicol)

2007-02-13  Emmanuele Bassi  <ebassi@gnome.org>

	* Makefile.am:
	* AUTHORS: Add authors file.

	* TODO: Update.

2007-01-31  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-about.c: Fix C99-ism. (#376937, Jens Granseuer)

2007-01-12  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-client-context.c: Add a timeout or 30 seconds
	when establishing a connection to the dictionary server; if we
	receive something on the wire within the timeout limit we are
	safe, otherwise we force closing the connection. (#395837)

	* libgdict/gdict-defbox.c: Hush compiler warnings.

	* src/gdict-window.c: Try and fall back to the default source
	if we could not find the one set in GConf, before actually