@@ -1,5 +1,9 @@
 2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>
 
+	* libgdict/*.[ch]: Add more documentation.
+
+2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>
+
 	* libgdict/*.[ch]: Use the sources to write the documentation,
 	as it should be.
 
